2 September 2004 Menelaos Karavelas
- removed occurences of CGAL_USE_ADL_FOR_NT
- number_types_basic.h: added declarations for CORE::Expr

2 September 2004 Sylvain Pion
- test for the precense of the Number_type_traits tags.

2 September 2004 Sylvain Pion & Menelaos Karavelas
- number_type_basic.h :
  - Replace #includes by declarations (for g++ 3.4).
  - added declarations for specializations for Quotient<MP_Float>
  - added includes for Gmpz.h and Quotient.h, necessary for g++ 3.4
- Gmp.C : file removed and corresponding code was moved back to Gmpz.h

1 September 2004 Sylvain Pion
- Add missing #include <CGAL/Quotient.h> in src/MP_Float.C.

1 September 2004 Menelaos Karavelas
- added the following tags in number type traits: Has_exact_sqrt,
  Has_exact_ring_operations, Has_exact_division
- created default Rational_traits and moved applied the old rational
  traits to Quotient<NT>
- removed unsigned number types

1 September 2004 Sylvain Pion
- number_utils.h : remove #include <CGAL/kernel_basic.h>.
- Add src/Gmp.C to break cyclic include dependency with Quotient.
- include all number type files from CGAL/number_type_basic.h when
  CGAL_CFG_HAS_TWO_STAGE_NAME_LOOKUP is defined (g++ 3.4).

21 August 2004 Sylvain Pion
- Undo last change

20 August 2004 Menelaos Karavelas
- first attempt towards the new number type traits

13 August 2004 Sylvain Pion
- Use MPFR to properly fix to_interval(GMP types).

11 August 2004 Andreas Fabri
- bug fix in operator>>(istream, Gmpz)

9 August 2004 Sylvain Pion
- Use std::ios instead of std::ios_base to please g++ 2.95.

4 August 2004 Sylvain Pion
- operator>>(Gmpz) : better failure handling.

24 June 2004 Sylvain Pion
- Protect some leda number type functions against CGAL_USE_ADL_FOR_NT.

24 June 2004 Sylvain Pion
- Use CGAL_NTS instead of CGAL:: in Quotient::to_double.

20 June 2004 Sylvain Pion
- Minor optimisation : to_double(double) returns a const reference.

20 June 2004 Sylvain Pion