@@ -72,11 +72,6 @@ std::pair<double,double> to_interval(const MP_Float &);
 bool is_finite(const MP_Float &);
 bool is_valid(const MP_Float &);
 
-template<typename> class Quotient;
-
-double to_double(const Quotient<MP_Float>&);
-std::pair<double,double> to_interval(const Quotient<MP_Float>&);
-
 // long
 
 double to_double(long);
@@ -278,18 +273,6 @@ Gmpz gcd(const Gmpz &, const Gmpz &);
 Gmpz gcd(const Gmpz &, int);
 std::pair<double, double> to_interval (const Gmpz &);
 
-CGAL_END_NAMESPACE
-
-#include <CGAL/Quotient.h>
-
-#ifdef CGAL_USE_GMP
-#  include <CGAL/Gmpz.h>
-#endif
-
-CGAL_BEGIN_NAMESPACE
-
-double to_double(const Quotient<Gmpz>&);
-
 // Gmpq
 
 class Gmpq;
@@ -371,6 +354,25 @@ bool is_valid(const CORE::Expr &);
 Sign sign(const CORE::Expr&);
 Comparison_result compare(const CORE::Expr&, const CORE::Expr&);
 std::pair<double,double> to_interval (const CORE::Expr &);
+
+CGAL_END_NAMESPACE
+
+// specializations for Quotient
+
+#include <CGAL/Quotient.h>
+
+#ifdef CGAL_USE_GMP
+#  include <CGAL/Gmpz.h>
+#endif
+
+#include <CGAL/MP_Float.h>
+
+CGAL_BEGIN_NAMESPACE
+
+double to_double(const Quotient<Gmpz>&);
+
+double to_double(const Quotient<MP_Float>&);
+std::pair<double,double> to_interval(const Quotient<MP_Float>&);
 
 CGAL_END_NAMESPACE
 
